sql/core/src/test/resources/sql-tests/results/csv-functions.sql.out
-- Automatically generated by SQLQueryTestSuite
-- Number of queries: 17


-- !query
select from_csv('1, 3.14', 'a INT, f FLOAT')
-- !query schema
struct<from_csv(1, 3.14):struct<a:int,f:float>>
-- !query output
{"a":1,"f":3.14}


-- !query
select from_csv('26/08/2015', 'time Timestamp', map('timestampFormat', 'dd/MM/yyyy'))
-- !query schema
struct<from_csv(26/08/2015):struct<time:timestamp>>
-- !query output
{"time":2015-08-26 00:00:00}


-- !query
select from_csv('1', 1)
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.AnalysisException
The expression '1' is not a valid schema string.; line 1 pos 7


-- !query
select from_csv('1', 'a InvalidType')
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.AnalysisException
Cannot parse the data type: 
Syntax error at or near 'InvalidType': extra input 'InvalidType'(line 1, pos 2)

== SQL ==
a InvalidType
--^^^

Failed fallback parsing: 
DataType invalidtype is not supported.(line 1, pos 2)

== SQL ==
a InvalidType
--^^^
; line 1 pos 7


-- !query
select from_csv('1', 'a INT', named_struct('mode', 'PERMISSIVE'))
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.AnalysisException
Must use a map() function for options; line 1 pos 7


-- !query
select from_csv('1', 'a INT', map('mode', 1))
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.AnalysisException
A type of keys and values in map() must be string, but got map<string,int>; line 1 pos 7


-- !query
select from_csv()
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.AnalysisException
Invalid number of arguments for function from_csv. Expected: one of 2 and 3; Found: 0; line 1 pos 7


-- !query
select from_csv('1,abc', schema_of_csv('1,abc'))
-- !query schema
struct<from_csv(1,abc):struct<_c0:int,_c1:string>>
-- !query output
{"_c0":1,"_c1":"abc"}


-- !query
select schema_of_csv('1|abc', map('delimiter', '|'))
-- !query schema
struct<schema_of_csv(1|abc):string>
-- !query output
STRUCT<_c0: INT, _c1: STRING>


-- !query
select schema_of_csv(null)
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.AnalysisException
cannot resolve 'schema_of_csv(NULL)' due to data type mismatch: The input csv should be a foldable string expression and not null; however, got NULL.; line 1 pos 7


-- !query
CREATE TEMPORARY VIEW csvTable(csvField, a) AS SELECT * FROM VALUES ('1,abc', 'a')
-- !query schema
struct<>
-- !query output



-- !query
SELECT schema_of_csv(csvField) FROM csvTable
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.AnalysisException
cannot resolve 'schema_of_csv(csvtable.csvField)' due to data type mismatch: The input csv should be a foldable string expression and not null; however, got csvtable.csvField.; line 1 pos 7


-- !query
DROP VIEW IF EXISTS csvTable
-- !query schema
struct<>
-- !query output



-- !query
select to_csv(named_struct('a', 1, 'b', 2))
-- !query schema
struct<to_csv(named_struct(a, 1, b, 2)):string>
-- !query output
1,2


-- !query
select to_csv(named_struct('time', to_timestamp('2015-08-26', 'yyyy-MM-dd')), map('timestampFormat', 'dd/MM/yyyy'))
-- !query schema
struct<to_csv(named_struct(time, to_timestamp(2015-08-26, yyyy-MM-dd))):string>
-- !query output
26/08/2015


-- !query
select to_csv(named_struct('a', 1, 'b', 2), named_struct('mode', 'PERMISSIVE'))
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.AnalysisException
Must use a map() function for options; line 1 pos 7


-- !query
select to_csv(named_struct('a', 1, 'b', 2), map('mode', 1))
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.AnalysisException
A type of keys and values in map() must be string, but got map<string,int>; line 1 pos 7
